2007-12-10  Aaron Bockover  <abock@gnome.org>

	* src/nuke-core-tables:
	* src/run-banshee: Some scripts to help development

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	Moved the insert/update calls from CoreTracksSchema

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs: Added
	AddNamedParameter method

	* src/Core/Banshee.Services/Banshee.Database/TableSchema.cs: Generic 
	table schema code to parse table definitions and generate basic insert
	update commands

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Fixed some comment junk

2007-12-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/BansheeCacheableModelAdapter.cs:
	Change select command to be a reusable BansheeDbCommand.

	* src/Core/Banshee.Services/Banshee.Collection.Database/CoreTracksSchema.cs:
	Get track update commands working.

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	Add ArtistId and AlbumId properties.  Change Commit method to Save.

	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs: Call
	Save not Commit.

2007-12-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/Common.Makefile:
	* build/build.environment.mk:
	* build/m4/banshee/mono-addins.m4: Add Mono.Addins.Setup/Gui dependency
	check.  Change from Mono.Data.SqliteClient to Mono.Data.Sqlite.

	* src/Core/Banshee.Services/Banshee.Collection.Database/CoreTracksSchema.cs:
	Update the generation of the insert_command and update_command so they are
	reused.

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	Add setter on DbId so CoreTracksSchema can set it.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs:
	Switch to Mono.Data.Sqlite, change DbCommand to BansheeDbCommand.

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs: Rewrite
	add/remove tracks from playlist queries to be reusable.
